[gd_scene load_steps=5 format=2]

[ext_resource path="res://actors/Interactables/Fuel.gd" type="Script" id=1]
[ext_resource path="res://actors/Interactables/FuelTank.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.21612, 7.55041 )

[sub_resource type="RectangleShape2D" id=2]

[node name="Fuel" type="StaticBody2D" groups=[
"fuel",
]]
z_index = -4
collision_layer = 4
collision_mask = 4
script = ExtResource( 1 )
state = "Full"
refill_time = 2.0

[node name="FuelTank" parent="." instance=ExtResource( 2 )]
frame = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 0.385536 )
shape = SubResource( 1 )

[node name="RefillTime" type="Timer" parent="."]

[node name="PlayerDetector" type="Area2D" parent="."]
editor/display_folded = true
visible = false
z_index = -4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource( 2 )
[connection signal="timeout" from="RefillTime" to="." method="_on_RefillTime_timeout"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
